[tool.poetry]
name = "hicdex"
version = "1.3.0"
description = "an indexer for hicetnunc objkts based on dipdup by Baking Bad"
license = " AGPL-3.0"
authors = [
    "marchingsquare <johnsmith@example.com>"
]
readme = "README.md"
packages = [
    { include = "hicdex", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dipdup = "^5.1.4"
hashids = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
bump2version = "^1.0.1"
diff-cover = "^5.0.1"
flake8 = "^3.9.2"
flake8-return = "^1.1.3"
flake8-comprehensions = "^3.8.0"
flake8-bugbear = "^22.1.11"
flake8-simplify = "^0.14.5"
flakehell = "^0.9.0"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
types-pytz = "^2021.1.2"
types-tabulate = "^0.8.2"

[tool.isort]
line_length = 140

[tool.black]
line-length = 140
target-version = ['py310']
skip-string-normalization = true

[tool.flakehell]
format = "colored"
max_line_length = 140
show_source = true
extended_default_ignore = []

[tool.flakehell.plugins]
pyflakes = ["+*"]
"flake8-*" = ["+*"]
flake8-docstrings = ["-*"]
flake8-simplify = ["-SIM106"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
